--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -423,14 +423,14 @@ input:focus:-ms-input-placeholder {
     border-top: 5px solid #f28500;
 }
 
-.last-message {
+.recent-message {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6vw;
-    color: #f28500;
+    color: #000;
 }
 
-.last-message span {
-    color: #000;
+.recent-message-bracket {
+    color: #f28500;
 }
 
 .post-icon {
@@ -531,7 +531,7 @@ input:focus:-ms-input-placeholder {
     align-items: center;
     flex: 1;
     min-height: 0;
-    border: 4px solid #f28500;
+    border: 5px solid #f28500;
     box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
 }
 
@@ -597,11 +597,11 @@ input:focus:-ms-input-placeholder {
 }
 
 .DE-shadow-watchlist {
-    box-shadow: inset 0 -0.5vw 0 #F28500;
+    box-shadow: inset 0 -0.6vw 0 #F28500;
 }
 
 .TH-shadow-watchlist {
-    box-shadow: inset 0 -0.5vw 0 #30f200;
+    box-shadow: inset 0 -0.6vw 0 #30f200;
 }
 
 .watchlist-bold {
@@ -759,6 +759,7 @@ input:focus:-ms-input-placeholder {
     .left {
         width: 100%;
         margin: 0;
+        border-bottom: 6px solid #f28500;
     }
 
     .sort {
@@ -862,6 +863,10 @@ input:focus:-ms-input-placeholder {
         margin-top: 0;
     }
 
+    .recent-message {
+        font-size: 2.5vw;
+    }
+
     .watchlist {
         display: flex;
         flex-direction: column;
@@ -880,10 +885,6 @@ input:focus:-ms-input-placeholder {
 
     .watchlist li {
         font-size: 16px;
-    }
-
-    .last-message {
-        font-size: 2.5vw;
     }
 }
 
@@ -1025,36 +1026,23 @@ input:focus:-ms-input-placeholder {
         display: none;
     }
 
-    .post {
-        margin: 0;
-        border-radius: 0;
-        border: none;
-        border-top: 3px solid #F28500;
-        border-bottom: 3px solid #F28500;
-        box-shadow: none;
-    }
-
-    .post:nth-child(2) {
-        border-top: none;
-    }
-
     .post:hover {
         transform: none; 
     }
 
-    .post h1{
+    .post-title {
         font-family: 'Poppins', sans-serif;
-        font-size: 9vw;
+        font-size: 8vw;
         color: black;
-        padding: 15px 20px 0px 20px;
+        padding: 5px 15px 0px 15px;
     }
 
     .post-title-de {
-        box-shadow: inset 0 -5vw 0 #f28500;
+        box-shadow: inset 0 -3.8vw 0 #f28500;
     }
 
     .post-title-th {
-        box-shadow: inset 0 -5vw 0 #30f200;
+        box-shadow: inset 0 -3.8vw 0 #30f200;
     }
 
     .post-bar {
@@ -1072,27 +1060,24 @@ input:focus:-ms-input-placeholder {
         font-family: 'Poppins', sans-serif;
         font-size: 4vw;
         color: black;
-        margin: 0px 20px 5px 20px;
-    }
-
-    .post-div {
-        border-width: 3px;
     }
 
     .post h4 {
         font-size: 3.8vw;
     }
 
-    .post-label {
-        display: none;
+    .recent-message {
+        font-size: 6vw;
+        white-space: nowrap;
     }
-    
-    .message-bar {
+
+    .recent-message-content {
         display: none;
     }
 
-    .post-counter-ticker-wrapper {
-        display: none;
+    .message-bar {
+        padding: 0;
+        justify-content: center;
     }
 
     .bottom {
