--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -129,6 +129,7 @@
                 <p id="chat-input" contenteditable="true" placeholder="Type in chat..."></p><!-- CSS attributes seem a bit clunkly, try integrate the JQuery solution to contenteditable placeholders if need be -->
                 <button id="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg></button>
             </div>
+            <div class="typing-indicator hidden" id="typing-indicator"><span class="color-OR">bobgoodman</span> is typing...</div>
         </div>
     <!--
         <div class="anonymous-screen">
