--- a/templates/comms/dogs.html
+++ b/templates/comms/dogs.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load poll_extras %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -88,9 +89,9 @@
             <div class="level mobile-header">
                 <a href="">
                     {% if post.post_type == 'DE' %}
-                    <h2><span class="mobile-header-shadow-de">Declaration:</span> {{post.post_title}}</h2>
+                    <h2><span class="mobile-header-shadow-de">Declaration:</span> {{post.post_title | truncatesmart:60}}</h2>
                     {% elif post.post_type == 'TH' %}
-                    <h2><span class="mobile-header-shadow-th">Theory:</span> {{post.post_title}}</h2>
+                    <h2><span class="mobile-header-shadow-th">Theory:</span> {{post.post_title | truncatesmart:60}}</h2>
                     {% endif %}
                 </a>
             </div>
