--- a/templates/comms/dogs.html
+++ b/templates/comms/dogs.html
@@ -75,7 +75,7 @@
                     <h1 id="mobile-Y">yes={{ y }}</h1>
                 </a>
                 <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="option"> 
-                    <h1>C</h1>
+                    <h1>Chat</h1>
                 </a>
                 <a class="option" id="mobile-balance-option-N">
                     <h1 id="mobile-N">no={{ n }}</h1>
