--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -232,12 +232,16 @@ body {
     text-align: center;
 }
 
+.char-mobile-label {
+    display: none;
+}
+
 #title {
     font-family: 'Poppins', sans-serif;
     font-size: 3.2vw;
     font-weight: 700;
     margin-left: 2vw;
-    width: 55vw;
+    width: 60vw;
 }
 
 #title {
@@ -246,7 +250,7 @@ body {
 }
 
 #radio-label {
-    margin-right: 2vw;
+    margin-right: 1vw;
 }
 
 .radio-option input{
@@ -258,11 +262,11 @@ body {
 }
 
 #decleration:checked + label {
-    box-shadow: inset 0 -2vw 0 #F28500;
+    box-shadow: inset 0 -1.5vw 0 #F28500;
 }
 
 #theory:checked + label {
-    box-shadow: inset 0 -24px 0 #30f200;
+    box-shadow: inset 0 -1.5vw 0 #30f200;
 }
 
 input::-webkit-input-placeholder {
@@ -297,7 +301,7 @@ input:focus:-ms-input-placeholder {
 }
 
 #tags {
-    margin-left: 2vw;
+    margin-left: 1vw;
     width: 60vw;
 }
 
@@ -638,7 +642,7 @@ input:focus:-ms-input-placeholder {
 
     .middle-header-mobile {
         display: flex;
-        min-height: 40px;
+        min-height: 33px;
     }
 
     .right,
@@ -655,10 +659,9 @@ input:focus:-ms-input-placeholder {
         width: 100%;
         align-items: center;
         justify-content: center;
-        border-bottom: 3px solid #000000;
+        border-bottom: 1vw solid #000000;
         background-color: #000;
-        gap: 3px;
-        height: 33px;
+        gap: 1vw;
     }
     
     .middle-header-mobile a {
@@ -668,12 +671,12 @@ input:focus:-ms-input-placeholder {
         align-items: center;
         background-color: #ffffff;
         text-decoration: none;
-        padding: 5px 0;
+        height: 100%;
     }
     
     .middle-header-mobile a h1{
         font-family: 'Poppins', sans-serif;
-        font-size: 16px;
+        font-size: 4vw;
         color: #000000;
     }
     
@@ -694,9 +697,11 @@ input:focus:-ms-input-placeholder {
         display: flex;
         flex-direction: column;
         height: 100%;
-        width: 90%;
+        width: 100%;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .post-input {
@@ -705,47 +710,83 @@ input:focus:-ms-input-placeholder {
     }
 
     .radio-options {
-        gap: 4vw;
+        gap: 1vw;
         width: 100%;
+        border-top: 1vw solid #000;
+        border-bottom: 1vw solid #000;
+        background-color: #000;
+    }
+
+    #radio-label {
+        display: none;
     }
 
     #title {
+        text-align: center;
         font-size: 6vw;
+        width: 100vw;
+        margin: 0;
+        border-width: 1vw;
     }
 
     #tags {
+        text-align: center;
         font-size: 6vw;
+        width: 100vw;
+        margin: 0;
+        border-width: 1vw;
     }
 
     .post-input {
         width: 100%;
         font-size: 6vw;
+        flex-direction: column;
     }
 
     .post-input input {
         flex: 1;
     }
 
+    .char-label {
+        display: none;
+    }
+
+    .char-mobile-label {
+        display: flex;
+    }
+
+    .radio-option label {
+        display: inline-block;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+    }
+
     #post-input-text {
         flex-direction: column;
+        align-items: center;
     }
 
     #decleration:checked + label {
-        box-shadow: inset 0 -3.6vw 0 #F28500;
+        background-color: #F28500;
     }
 
     #theory:checked + label {
-        box-shadow: inset 0 -3.6vw 0 #30f200;
+        background-color: #30f200;
     }
 
     #post-input-text textarea {
-        width: 100%;
+        width: 95%;
+        padding: 2vw;
         box-sizing: border-box;
     }
 
     .post-input textarea {
         display: flex;
         font-size: 4.5vw;
+        border: 1vw solid #000;
+        margin: 0;
     }
 
     .mobile-bottom {
@@ -754,10 +795,10 @@ input:focus:-ms-input-placeholder {
         justify-content: center;
         align-items: center;
         width: 100%;
-        padding: 5px;
-        gap: 5px;
+        gap: 1vw;
         box-sizing: border-box;
         background-color: black;
+        border-top: 1vw solid #000;
         margin-top: auto;
     }
 
@@ -766,7 +807,7 @@ input:focus:-ms-input-placeholder {
         height: 100%;
         justify-content: center;
         align-items: center;
-        width: 100%;
+        width: 180%;
         border: none;
     }
 
